--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "mpy-cross-multi"
-version = "1.0.0"
+version = "1.1.0"
 description = "MicroPython cross-compiler targeting multiple runtime versions."
 authors = ["David Lechner <david@pybricks.com>"]
 license = "MIT"
@@ -15,6 +15,7 @@ mpy-cross-v5 = "^1.0.2"
 mpy-cross-v6 = "^1.0.2"
 "mpy-cross-v6.1" = "^1.0.1"
 "mpy-cross-v6.2" = "^1.0.0"
+"mpy-cross-v6.3" = "^1.0.0"
 semver = "^3.0.2"
 
 [tool.poetry.group.dev.dependencies]
