--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "mpy-cross-multi"
-version = "1.1.2"
+version = "2.0.0"
 description = "MicroPython cross-compiler targeting multiple runtime versions."
 authors = ["David Lechner <david@pybricks.com>"]
 license = "MIT"
@@ -11,16 +11,16 @@ homepage = "https://github.com/pybricks/python-mpy-cross-multi"
 "mpy-cross-multi" = "mpy_cross_multi.__main__:_run"
 
 [tool.poetry.dependencies]
-python = "^3.8"
-mpy-cross-v5 = "^1.0.2"
-mpy-cross-v6 = "^1.0.2"
-"mpy-cross-v6.1" = "^1.0.1"
-"mpy-cross-v6.2" = "^1.0.0"
-"mpy-cross-v6.3" = "^1.0.0"
-semver = "^3.0.2"
+python = ">=3.9"
+mpy-cross-v5 = ">=1.1.0"
+mpy-cross-v6 = ">=1.1.0"
+"mpy-cross-v6.1" = ">=1.0.1"
+"mpy-cross-v6.2" = ">=1.0.0"
+"mpy-cross-v6.3" = ">=1.0.0"
+semver = ">=3.0.2"
 
 [tool.poetry.group.dev.dependencies]
-ruff = "^0.4.3"
+ruff = ">=0.12.8"
 
 [build-system]
 requires = ["poetry-core"]
