pyproject: convert to uv

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,27 +1,29 @@
-[tool.poetry]
+[project]
 name = "mpy-cross-multi"
 version = "2.0.0"
 description = "MicroPython cross-compiler targeting multiple runtime versions."
-authors = ["David Lechner <david@pybricks.com>"]
-license = "MIT"
+authors = [{ name = "David Lechner", email = "david@pybricks.com" }]
+requires-python = ">=3.9"
 readme = "README.md"
-homepage = "https://github.com/pybricks/python-mpy-cross-multi"
+license = "MIT"
+dependencies = [
+    "mpy-cross-v5>=1.1.0",
+    "mpy-cross-v6>=1.1.0",
+    "mpy-cross-v6.1>=1.0.1",
+    "mpy-cross-v6.2>=1.0.0",
+    "mpy-cross-v6.3>=1.0.0",
+    "semver>=3.0.2",
+]
 
-[tool.poetry.scripts]
-"mpy-cross-multi" = "mpy_cross_multi.__main__:_run"
+[project.urls]
+Homepage = "https://github.com/pybricks/python-mpy-cross-multi"
 
-[tool.poetry.dependencies]
-python = ">=3.9"
-mpy-cross-v5 = ">=1.1.0"
-mpy-cross-v6 = ">=1.1.0"
-"mpy-cross-v6.1" = ">=1.0.1"
-"mpy-cross-v6.2" = ">=1.0.0"
-"mpy-cross-v6.3" = ">=1.0.0"
-semver = ">=3.0.2"
+[project.scripts]
+mpy-cross-multi = "mpy_cross_multi.__main__:_run"
 
-[tool.poetry.group.dev.dependencies]
-ruff = ">=0.12.8"
+[dependency-groups]
+dev = ["ruff>=0.12.8"]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
