add subprojects for each MPY version
These are migrated from the pybricks/python-mpy-cross project. It will
be easier to manage all versions on a single branch in a single
repository.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,8 +2,9 @@
 name: Publish Python Package
 
 on:
-  release:
-    types: [published]
+  push:
+    tags:
+      - mpy-cross-multi/v*
 
 permissions:
   contents: read
